--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<p>Hello world!</p>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>My Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+    <h1>Welcome to My Portfolio</h1>
+    <p>This is a simple HTML file with an external CSS file.</p>
+</body>
+</html>
