--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="container"><a class="navbar-brand d-flex align-items-center" href="/"><span class="bs-icon-sm bs-icon-circle bs-icon-primary shadow d-flex justify-content-center align-items-center me-2 bs-icon" style="background: var(--bs-navbar-disabled-color);"><img src="assets/img/assets/BetterMath%20logo.png" style="width: 40px;height: 40px;border-radius: 25%;" width="20" height="20"></span><span>BetterMath</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav mx-auto">
-                    <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://dhaiven.github.io/">Home</a></li>
                 </ul><a class="btn btn-primary shadow" role="button" href="https://github.com/Dhaiven/BetterMath" style="background: var(--bs-success);" target="_blank">Github</a>
             </div>
         </div>
@@ -86,7 +86,7 @@
                                         <path d="M14.804 8 9 4.633v6.734zm.792-.696a.802.802 0 0 1 0 1.392l-6.363 3.692C8.713 12.69 8 12.345 8 11.692V4.308c0-.653.713-.998 1.233-.696z"></path>
                                     </svg></div>
                                 <h5 class="fw-bold card-title">Fast and responsive</h5>
-                                <p class="text-muted card-text mb-4">Erat netus est hendrerit, nullam et quis ad cras porttitor iaculis. Bibendum vulputate cras aenean.</p><button class="btn btn-primary shadow" type="button">Learn more</button>
+                                <p class="text-muted card-text mb-4">Erat netus est hendrerit, nullam et quis ad cras porttitor iaculis. Bibendum vulputate cras aenean.</p><a class="btn btn-primary shadow" role="button" href="https://github.com/Dhaiven/BetterMath" target="_blank">Learn more</a>
                             </div>
                         </div>
                     </div>
@@ -98,7 +98,7 @@
                                         <path d="M6 4.5H1.866a1 1 0 1 0 0 1h2.668A6.517 6.517 0 0 0 1.814 9H2.5c.123 0 .244.015.358.043a5.517 5.517 0 0 1 3.185-3.185A1.503 1.503 0 0 1 6 5.5zm3.957 1.358A1.5 1.5 0 0 0 10 5.5v-1h4.134a1 1 0 1 1 0 1h-2.668a6.517 6.517 0 0 1 2.72 3.5H13.5c-.123 0-.243.015-.358.043a5.517 5.517 0 0 0-3.185-3.185z"></path>
                                     </svg></div>
                                 <h5 class="fw-bold card-title">Easy to modify</h5>
-                                <p class="text-muted card-text mb-4">Erat netus est hendrerit, nullam et quis ad cras porttitor iaculis. Bibendum vulputate cras aenean.</p><button class="btn btn-primary shadow" type="button">Learn more</button>
+                                <p class="text-muted card-text mb-4">Erat netus est hendrerit, nullam et quis ad cras porttitor iaculis. Bibendum vulputate cras aenean.</p><a class="btn btn-primary shadow" role="button" href="https://github.com/Dhaiven/BetterMath" target="_blank">Learn more</a>
                             </div>
                         </div>
                     </div>
@@ -110,7 +110,7 @@
                                         <path d="M7.646 15.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 14.293V5.5a.5.5 0 0 0-1 0v8.793l-2.146-2.147a.5.5 0 0 0-.708.708z"></path>
                                     </svg></div>
                                 <h5 class="fw-bold card-title">Frequent updates</h5>
-                                <p class="text-muted card-text mb-4">Erat netus est hendrerit, nullam et quis ad cras porttitor iaculis. Bibendum vulputate cras aenean.</p><button class="btn btn-primary shadow" type="button">Learn more</button>
+                                <p class="text-muted card-text mb-4">Erat netus est hendrerit, nullam et quis ad cras porttitor iaculis. Bibendum vulputate cras aenean.</p><a class="btn btn-primary shadow" role="button" href="https://github.com/Dhaiven/BetterMath" target="_blank">Learn more</a>
                             </div>
                         </div>
                     </div>
@@ -122,7 +122,7 @@
                                         <path d="M7.066 6.76A1.665 1.665 0 0 0 4 7.668a1.667 1.667 0 0 0 2.561 1.406c-.131.389-.375.804-.777 1.22a.417.417 0 0 0 .6.58c1.486-1.54 1.293-3.214.682-4.112zm4 0A1.665 1.665 0 0 0 8 7.668a1.667 1.667 0 0 0 2.561 1.406c-.131.389-.375.804-.777 1.22a.417.417 0 0 0 .6.58c1.486-1.54 1.293-3.214.682-4.112z"></path>
                                     </svg></div>
                                 <h5 class="fw-bold card-title">Support 24/7</h5>
-                                <p class="text-muted card-text mb-4">Erat netus est hendrerit, nullam et quis ad cras porttitor iaculis. Bibendum vulputate cras aenean.</p><button class="btn btn-primary shadow" type="button">Learn more</button>
+                                <p class="text-muted card-text mb-4">Erat netus est hendrerit, nullam et quis ad cras porttitor iaculis. Bibendum vulputate cras aenean.</p><a class="btn btn-primary shadow" role="button" href="https://github.com/Dhaiven/BetterMath" target="_blank">Learn more</a>
                             </div>
                         </div>
                     </div>
@@ -282,10 +282,10 @@
                 <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
                     <h3 class="fs-6 fw-bold">Features</h3>
                     <ul class="list-unstyled">
-                        <li><a href="#">Equations</a></li>
+                        <li><a href="https://github.com/Dhaiven/BetterMath/wiki/Equation" target="_blank">Equations</a></li>
                         <li><a href="#">Geometry</a></li>
                         <li><a href="#">Probabilities</a></li>
-                        <li><a href="#">More</a></li>
+                        <li><a href="https://github.com/Dhaiven/BetterMath/wiki" target="_blank">More</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
