change name to BetterMaths

--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Home - BetterMath</title>
-    <meta name="twitter:description" content="BetterMath turbocharges your mathematical computations in Python. From basic arithmetic to advanced functions, unlock precision and efficiency with ease.">
-    <meta name="twitter:image" content="https://dhaiven.github.io/BetterMath/assets/img/assets/BetterMath banner.png">
-    <meta property="og:image" content="https://dhaiven.github.io/BetterMath/assets/img/assets/BetterMath logo.png">
-    <meta name="description" content="BetterMath turbocharges your mathematical computations in Python. From basic arithmetic to advanced functions, unlock precision and efficiency with ease.">
-    <meta property="og:type" content="website">
+    <meta name="twitter:description" content="BetterMaths turbocharges your mathematical computations in Python. From basic arithmetic to advanced functions, unlock precision and efficiency with ease.">
+    <meta name="description" content="BetterMaths turbocharges your mathematical computations in Python. From basic arithmetic to advanced functions, unlock precision and efficiency with ease.">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="BetterMath">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://dhaiven.github.io/BetterMaths/assets/img/assets/BetterMath logo.png">
+    <meta name="twitter:image" content="assets/BetterMath banner.png">
+    <meta name="twitter:title" content="BetterMaths">
     <script type="application/ld+json">
         {
             "@context": "http://schema.org",
             "@type": "WebSite",
             "name": "Brand",
-            "url": "https://dhaiven.github.io/BetterMath/"
+            "url": "https://dhaiven.github.io/BetterMaths/"
         }
     </script>
     <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="assets/img/favicons/apple-touch-icon.png">
@@ -39,7 +39,7 @@
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a class="nav-link" href="https://dhaiven.github.io/">Home</a></li>
-                </ul><a class="btn btn-primary shadow" role="button" href="https://github.com/Dhaiven/BetterMath" style="background: var(--bs-success);" target="_blank">Github</a>
+                </ul><a class="btn btn-primary shadow" role="button" href="https://github.com/Dhaiven/BetterMaths" style="background: var(--bs-success);" target="_blank">Github</a>
             </div>
         </div>
     </nav>
@@ -48,9 +48,9 @@
             <div class="row py-5">
                 <div class="col-md-6 text-center text-md-start d-flex d-sm-flex d-md-flex justify-content-center align-items-center justify-content-md-start align-items-md-center justify-content-xl-end mb-4">
                     <div style="max-width: 450px;">
-                        <p class="fw-bold text-success mb-2">BetterMath</p>
+                        <p class="fw-bold text-success mb-2">BetterMaths</p>
                         <h2 class="fw-bold">Python mathematics<br>made easier</h2>
-                        <p class="my-3">BetterMath turbocharges your mathematical computations in Python. From basic arithmetic to advanced functions, unlock precision and efficiency with ease.</p>
+                        <p class="my-3">BetterMaths turbocharges your mathematical computations in Python. From basic arithmetic to advanced functions, unlock precision and efficiency with ease.</p>
                         <form class="d-flex justify-content-center flex-wrap justify-content-md-start flex-lg-nowrap" data-bs-theme="light" data-bss-recipient="a0092fb7ef65439d5fb0c2f554200c67">
                             <div class="my-2 me-2"><input class="border rounded-pill shadow-sm form-control" type="email" name="email" placeholder="Your Email"></div>
                             <div class="my-2"><button class="btn btn-primary shadow" type="submit">Subscribe </button></div>
@@ -86,7 +86,7 @@
                                         <path d="M14.804 8 9 4.633v6.734zm.792-.696a.802.802 0 0 1 0 1.392l-6.363 3.692C8.713 12.69 8 12.345 8 11.692V4.308c0-.653.713-.998 1.233-.696z"></path>
                                     </svg></div>
                                 <h5 class="fw-bold card-title">Fast and responsive</h5>
-                                <p class="text-muted card-text mb-4">Erat netus est hendrerit, nullam et quis ad cras porttitor iaculis. Bibendum vulputate cras aenean.</p><a class="btn btn-primary shadow" role="button" href="https://github.com/Dhaiven/BetterMath" target="_blank">Learn more</a>
+                                <p class="text-muted card-text mb-4">Erat netus est hendrerit, nullam et quis ad cras porttitor iaculis. Bibendum vulputate cras aenean.</p><a class="btn btn-primary shadow" role="button" href="https://github.com/Dhaiven/BetterMaths" target="_blank">Learn more</a>
                             </div>
                         </div>
                     </div>
@@ -98,7 +98,7 @@
                                         <path d="M6 4.5H1.866a1 1 0 1 0 0 1h2.668A6.517 6.517 0 0 0 1.814 9H2.5c.123 0 .244.015.358.043a5.517 5.517 0 0 1 3.185-3.185A1.503 1.503 0 0 1 6 5.5zm3.957 1.358A1.5 1.5 0 0 0 10 5.5v-1h4.134a1 1 0 1 1 0 1h-2.668a6.517 6.517 0 0 1 2.72 3.5H13.5c-.123 0-.243.015-.358.043a5.517 5.517 0 0 0-3.185-3.185z"></path>
                                     </svg></div>
                                 <h5 class="fw-bold card-title">Easy to modify</h5>
-                                <p class="text-muted card-text mb-4">Erat netus est hendrerit, nullam et quis ad cras porttitor iaculis. Bibendum vulputate cras aenean.</p><a class="btn btn-primary shadow" role="button" href="https://github.com/Dhaiven/BetterMath" target="_blank">Learn more</a>
+                                <p class="text-muted card-text mb-4">Erat netus est hendrerit, nullam et quis ad cras porttitor iaculis. Bibendum vulputate cras aenean.</p><a class="btn btn-primary shadow" role="button" href="https://github.com/Dhaiven/BetterMaths" target="_blank">Learn more</a>
                             </div>
                         </div>
                     </div>
@@ -110,7 +110,7 @@
                                         <path d="M7.646 15.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 14.293V5.5a.5.5 0 0 0-1 0v8.793l-2.146-2.147a.5.5 0 0 0-.708.708z"></path>
                                     </svg></div>
                                 <h5 class="fw-bold card-title">Frequent updates</h5>
-                                <p class="text-muted card-text mb-4">Erat netus est hendrerit, nullam et quis ad cras porttitor iaculis. Bibendum vulputate cras aenean.</p><a class="btn btn-primary shadow" role="button" href="https://github.com/Dhaiven/BetterMath" target="_blank">Learn more</a>
+                                <p class="text-muted card-text mb-4">Erat netus est hendrerit, nullam et quis ad cras porttitor iaculis. Bibendum vulputate cras aenean.</p><a class="btn btn-primary shadow" role="button" href="https://github.com/Dhaiven/BetterMaths" target="_blank">Learn more</a>
                             </div>
                         </div>
                     </div>
@@ -122,7 +122,7 @@
                                         <path d="M7.066 6.76A1.665 1.665 0 0 0 4 7.668a1.667 1.667 0 0 0 2.561 1.406c-.131.389-.375.804-.777 1.22a.417.417 0 0 0 .6.58c1.486-1.54 1.293-3.214.682-4.112zm4 0A1.665 1.665 0 0 0 8 7.668a1.667 1.667 0 0 0 2.561 1.406c-.131.389-.375.804-.777 1.22a.417.417 0 0 0 .6.58c1.486-1.54 1.293-3.214.682-4.112z"></path>
                                     </svg></div>
                                 <h5 class="fw-bold card-title">Support 24/7</h5>
-                                <p class="text-muted card-text mb-4">Erat netus est hendrerit, nullam et quis ad cras porttitor iaculis. Bibendum vulputate cras aenean.</p><a class="btn btn-primary shadow" role="button" href="https://github.com/Dhaiven/BetterMath" target="_blank">Learn more</a>
+                                <p class="text-muted card-text mb-4">Erat netus est hendrerit, nullam et quis ad cras porttitor iaculis. Bibendum vulputate cras aenean.</p><a class="btn btn-primary shadow" role="button" href="https://github.com/Dhaiven/BetterMaths" target="_blank">Learn more</a>
                             </div>
                         </div>
                     </div>
@@ -138,7 +138,7 @@
                         <div class="card bg-primary-subtle">
                             <div class="card-body text-center px-4 py-5 px-md-5">
                                 <p class="fw-bold text-primary card-text mb-2">Equations</p>
-                                <h5 class="fw-bold card-title mb-3">Lorem ipsum dolor sit&nbsp;nullam et quis ad cras porttitor</h5><a class="btn btn-primary btn-sm" role="button" target="_blank" href="https://github.com/Dhaiven/BetterMath/wiki/Equation">Learn more</a>
+                                <h5 class="fw-bold card-title mb-3">Lorem ipsum dolor sit&nbsp;nullam et quis ad cras porttitor</h5><a class="btn btn-primary btn-sm" role="button" target="_blank" href="https://github.com/Dhaiven/BetterMaths/wiki/Equation">Learn more</a>
                             </div>
                         </div>
                     </div>
@@ -282,10 +282,10 @@
                 <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
                     <h3 class="fs-6 fw-bold">Features</h3>
                     <ul class="list-unstyled">
-                        <li><a href="https://github.com/Dhaiven/BetterMath/wiki/Equation" target="_blank">Equations</a></li>
+                        <li><a href="https://github.com/Dhaiven/BetterMaths/wiki/Equation" target="_blank">Equations</a></li>
                         <li><a href="#">Geometry</a></li>
                         <li><a href="#">Probabilities</a></li>
-                        <li><a href="https://github.com/Dhaiven/BetterMath/wiki" target="_blank">More</a></li>
+                        <li><a href="https://github.com/Dhaiven/BetterMaths/wiki" target="_blank">More</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-4 col-md-3 text-center text-lg-start d-flex flex-column">
@@ -296,15 +296,15 @@
                     </ul>
                 </div>
                 <div class="col-lg-3 text-center text-lg-start d-flex flex-column align-items-center order-first align-items-lg-start order-lg-last">
-                    <div class="fw-bold d-flex align-items-center mb-2"><span class="bs-icon-sm bs-icon-circle bs-icon-primary d-flex justify-content-center align-items-center bs-icon me-2"><img src="assets/img/assets/BetterMath%20logo.png" style="width: 40px;border-radius: 20%;"></span><span>BetterMath</span></div>
+                    <div class="fw-bold d-flex align-items-center mb-2"><span class="bs-icon-sm bs-icon-circle bs-icon-primary d-flex justify-content-center align-items-center bs-icon me-2"><img src="assets/img/assets/BetterMath%20logo.png" style="width: 40px;border-radius: 20%;"></span><span>BetterMaths</span></div>
                     <p class="text-muted">Python mathematics<br>made easier.</p>
                 </div>
             </div>
             <hr>
             <div class="text-muted d-flex justify-content-between align-items-center pt-3">
-                <p class="mb-0">Copyright © 2024 BetterMath</p>
+                <p class="mb-0">Copyright © 2024 BetterMaths</p>
                 <ul class="list-inline mb-0">
-                    <li class="list-inline-item"><a target="_blank" href="https://github.com/Dhaiven/BetterMath"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-github">
+                    <li class="list-inline-item"><a target="_blank" href="https://github.com/Dhaiven/BetterMaths"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-github">
                                 <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8"></path>
                             </svg></a></li>
                 </ul>
