added some text to landing page

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                                         <path d="M14.804 8 9 4.633v6.734zm.792-.696a.802.802 0 0 1 0 1.392l-6.363 3.692C8.713 12.69 8 12.345 8 11.692V4.308c0-.653.713-.998 1.233-.696z"></path>
                                     </svg></div>
                                 <h5 class="fw-bold card-title">Fast and responsive</h5>
-                                <p class="text-muted card-text mb-4">Erat netus est hendrerit, nullam et quis ad cras porttitor iaculis. Bibendum vulputate cras aenean.</p><a class="btn btn-primary shadow" role="button" href="https://github.com/Dhaiven/BetterMaths" target="_blank">Learn more</a>
+                                <p class="text-muted card-text mb-4">BetterMaths ensures swift calculations, enhancing productivity with optimized algorithms and efficient code. It delivers rapid results for both complex operations and extensive computations, making it perfect for time-sensitive tasks.</p><a class="btn btn-primary shadow" role="button" href="https://github.com/Dhaiven/BetterMaths" target="_blank">Learn more</a>
                             </div>
                         </div>
                     </div>
@@ -98,7 +98,7 @@
                                         <path d="M6 4.5H1.866a1 1 0 1 0 0 1h2.668A6.517 6.517 0 0 0 1.814 9H2.5c.123 0 .244.015.358.043a5.517 5.517 0 0 1 3.185-3.185A1.503 1.503 0 0 1 6 5.5zm3.957 1.358A1.5 1.5 0 0 0 10 5.5v-1h4.134a1 1 0 1 1 0 1h-2.668a6.517 6.517 0 0 1 2.72 3.5H13.5c-.123 0-.243.015-.358.043a5.517 5.517 0 0 0-3.185-3.185z"></path>
                                     </svg></div>
                                 <h5 class="fw-bold card-title">Easy to modify</h5>
-                                <p class="text-muted card-text mb-4">Erat netus est hendrerit, nullam et quis ad cras porttitor iaculis. Bibendum vulputate cras aenean.</p><a class="btn btn-primary shadow" role="button" href="https://github.com/Dhaiven/BetterMaths" target="_blank">Learn more</a>
+                                <p class="text-muted card-text mb-4">BetterMaths offers seamless customization, allowing users to easily tweak parameters and integrate additional features. Its intuitive design and well-structured codebase empower users to make modifications effortlessly, fostering adaptability and innovation.</p><a class="btn btn-primary shadow" role="button" href="https://github.com/Dhaiven/BetterMaths" target="_blank">Learn more</a>
                             </div>
                         </div>
                     </div>
@@ -110,7 +110,7 @@
                                         <path d="M7.646 15.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 14.293V5.5a.5.5 0 0 0-1 0v8.793l-2.146-2.147a.5.5 0 0 0-.708.708z"></path>
                                     </svg></div>
                                 <h5 class="fw-bold card-title">Frequent updates</h5>
-                                <p class="text-muted card-text mb-4">Erat netus est hendrerit, nullam et quis ad cras porttitor iaculis. Bibendum vulputate cras aenean.</p><a class="btn btn-primary shadow" role="button" href="https://github.com/Dhaiven/BetterMaths" target="_blank">Learn more</a>
+                                <p class="text-muted card-text mb-4">BetterMaths is regularly updated to incorporate user feedback and advancements in mathematical techniques. These updates ensure users have access to the latest innovations, providing cutting-edge tools and capabilities for their mathematical endeavors.</p><a class="btn btn-primary shadow" role="button" href="https://github.com/Dhaiven/BetterMaths" target="_blank">Learn more</a>
                             </div>
                         </div>
                     </div>
@@ -122,7 +122,7 @@
                                         <path d="M7.066 6.76A1.665 1.665 0 0 0 4 7.668a1.667 1.667 0 0 0 2.561 1.406c-.131.389-.375.804-.777 1.22a.417.417 0 0 0 .6.58c1.486-1.54 1.293-3.214.682-4.112zm4 0A1.665 1.665 0 0 0 8 7.668a1.667 1.667 0 0 0 2.561 1.406c-.131.389-.375.804-.777 1.22a.417.417 0 0 0 .6.58c1.486-1.54 1.293-3.214.682-4.112z"></path>
                                     </svg></div>
                                 <h5 class="fw-bold card-title">Support 24/7</h5>
-                                <p class="text-muted card-text mb-4">Erat netus est hendrerit, nullam et quis ad cras porttitor iaculis. Bibendum vulputate cras aenean.</p><a class="btn btn-primary shadow" role="button" href="https://github.com/Dhaiven/BetterMaths" target="_blank">Learn more</a>
+                                <p class="text-muted card-text mb-4">BetterMaths provides round-the-clock customer support, offering assistance with module usage and troubleshooting. With a dedicated team of experts available at all times, users can rely on prompt assistance to ensure a seamless experience.</p><a class="btn btn-primary shadow" role="button" href="https://github.com/Dhaiven/BetterMaths" target="_blank">Learn more</a>
                             </div>
                         </div>
                     </div>
@@ -138,7 +138,7 @@
                         <div class="card bg-primary-subtle">
                             <div class="card-body text-center px-4 py-5 px-md-5">
                                 <p class="fw-bold text-primary card-text mb-2">Equations</p>
-                                <h5 class="fw-bold card-title mb-3">Lorem ipsum dolor sit&nbsp;nullam et quis ad cras porttitor</h5><a class="btn btn-primary btn-sm" role="button" target="_blank" href="https://github.com/Dhaiven/BetterMaths/wiki/Equation">Learn more</a>
+                                <h5 class="fw-bold card-title mb-3">Swiftly solve diverse mathematical expressions with efficient algorithms, ensuring quick solutions.</h5><a class="btn btn-primary btn-sm" role="button" target="_blank" href="https://github.com/Dhaiven/BetterMaths/wiki/Equation">Learn more</a>
                             </div>
                         </div>
                     </div>
@@ -146,7 +146,7 @@
                         <div class="card bg-secondary-subtle">
                             <div class="card-body text-center px-4 py-5 px-md-5">
                                 <p class="fw-bold text-secondary card-text mb-2">Geometry</p>
-                                <h5 class="fw-bold card-title mb-3">Lorem ipsum dolor sit&nbsp;nullam et quis ad cras porttitor</h5><a class="btn btn-secondary btn-sm" role="button" href="#">Learn more</a>
+                                <h5 class="fw-bold card-title mb-3">Effortlessly compute geometric properties like areas, volumes, and angles, simplifying spatial analyses.</h5><a class="btn btn-secondary btn-sm" role="button" href="#">Learn more</a>
                             </div>
                         </div>
                     </div>
@@ -154,7 +154,7 @@
                         <div class="card bg-info-subtle">
                             <div class="card-body text-center px-4 py-5 px-md-5">
                                 <p class="fw-bold text-info card-text mb-2">Probabilities</p>
-                                <h5 class="fw-bold card-title mb-3">Lorem ipsum dolor sit&nbsp;nullam et quis ad cras porttitor</h5><a class="btn btn-info btn-sm" role="button" href="#">Learn more</a>
+                                <h5 class="fw-bold card-title mb-3">Accurately estimate probabilities for various scenarios, facilitating informed decision-making.</h5><a class="btn btn-info btn-sm" role="button" href="#">Learn more</a>
                             </div>
                         </div>
                     </div>
@@ -174,7 +174,7 @@
             <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 d-sm-flex justify-content-sm-center">
                 <div class="col mb-4">
                     <div class="d-flex flex-column align-items-center align-items-sm-start">
-                        <p class="bg-body-tertiary border rounded border-0 border-light p-4">Nisi sit justo faucibus nec ornare amet, tortor torquent. Blandit class dapibus, aliquet morbi.</p>
+                        <p class="bg-body-tertiary border rounded border-0 border-light p-4">BetterMaths has revolutionized how I approach complex equations. Its efficiency and accuracy have saved me countless hours, allowing me to focus on solving the world's biggest problems.</p>
                         <div class="d-flex">
                             <div>
                                 <p class="fw-bold text-primary mb-0">Bill Gates</p>
@@ -185,7 +185,7 @@
                 </div>
                 <div class="col mb-4">
                     <div class="d-flex flex-column align-items-center align-items-sm-start">
-                        <p class="bg-body-tertiary border rounded border-0 border-light p-4">Nisi sit justo faucibus nec ornare amet, tortor torquent. Blandit class dapibus, aliquet morbi.</p>
+                        <p class="bg-body-tertiary border rounded border-0 border-light p-4">As someone who values precision and speed, BetterMaths has become an essential tool in my toolkit. Whether I'm calculating angles for a wrestling move or managing finances, BetterMaths delivers results with unmatched reliability.</p>
                         <div class="d-flex">
                             <div>
                                 <p class="fw-bold text-primary mb-0">John Cena</p>
@@ -196,7 +196,7 @@
                 </div>
                 <div class="col mb-4">
                     <div class="d-flex flex-column align-items-center align-items-sm-start">
-                        <p class="bg-body-tertiary border rounded border-0 border-light p-4">Nisi sit justo faucibus nec ornare amet, tortor torquent. Blandit class dapibus, aliquet morbi.</p>
+                        <p class="bg-body-tertiary border rounded border-0 border-light p-4">BetterMaths has been instrumental in my training regimen. From analyzing match statistics to strategizing on the field, its intuitive interface and robust functionalities have helped me elevate my game to new heights.</p>
                         <div class="d-flex">
                             <div>
                                 <p class="fw-bold text-primary mb-0">Mbappé</p>
