--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="BetterMaths turbocharges your mathematical computations in Python. From basic arithmetic to advanced functions, unlock precision and efficiency with ease.">
     <meta name="twitter:card" content="summary_large_image">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://dhaiven.github.io/BetterMaths/assets/img/assets/BetterMath logo.png">
+    <meta property="og:image" content="https://dhaiven.github.io/assets/img/assets/BetterMath logo.png">
     <meta name="twitter:image" content="assets/BetterMath banner.png">
     <meta name="twitter:title" content="BetterMaths">
     <script type="application/ld+json">
@@ -17,7 +17,7 @@
             "@context": "http://schema.org",
             "@type": "WebSite",
             "name": "Brand",
-            "url": "https://dhaiven.github.io/BetterMaths/"
+            "url": "https://dhaiven.github.io/"
         }
     </script>
     <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="assets/img/favicons/apple-touch-icon.png">
@@ -35,7 +35,7 @@
 
 <body>
     <nav class="navbar navbar-expand-md sticky-top navbar-shrink py-3 navbar-light" id="mainNav">
-        <div class="container"><a class="navbar-brand d-flex align-items-center" href="/"><span class="bs-icon-sm bs-icon-circle bs-icon-primary shadow d-flex justify-content-center align-items-center me-2 bs-icon" style="background: var(--bs-navbar-disabled-color);"><img src="assets/img/assets/BetterMath%20logo.png" style="width: 40px;height: 40px;border-radius: 25%;" width="20" height="20"></span><span>BetterMath</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand d-flex align-items-center" href="/"><span class="bs-icon-sm bs-icon-circle bs-icon-primary shadow d-flex justify-content-center align-items-center me-2 bs-icon" style="background: var(--bs-navbar-disabled-color);"><img src="assets/img/assets/BetterMath%20logo.png" style="width: 40px;height: 40px;border-radius: 25%;" width="20" height="20"></span><span>BetterMaths</span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a class="nav-link" href="https://dhaiven.github.io/">Home</a></li>
