fixed title fr fr this time

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Home - BetterMath</title>
+    <title>Home - BetterMaths</title>
     <meta name="twitter:description" content="BetterMaths turbocharges your mathematical computations in Python. From basic arithmetic to advanced functions, unlock precision and efficiency with ease.">
     <meta name="description" content="BetterMaths turbocharges your mathematical computations in Python. From basic arithmetic to advanced functions, unlock precision and efficiency with ease.">
     <meta name="twitter:card" content="summary_large_image">
