added pictures to tesamonials

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 <div class="col mb-4">
                     <div class="d-flex flex-column align-items-center align-items-sm-start">
                         <p class="bg-body-tertiary border rounded border-0 border-light p-4">BetterMaths has revolutionized how I approach complex equations. Its efficiency and accuracy have saved me countless hours, allowing me to focus on solving the world's biggest problems.</p>
-                        <div class="d-flex">
+                        <div class="d-flex"><img class="rounded-circle flex-shrink-0 me-3 fit-cover" width="50" height="50" src="assets/img/testamonials/1.png">
                             <div>
                                 <p class="fw-bold text-primary mb-0">Bill Gates</p>
                                 <p class="text-muted mb-0">Microsoft</p>
@@ -186,7 +186,7 @@
                 <div class="col mb-4">
                     <div class="d-flex flex-column align-items-center align-items-sm-start">
                         <p class="bg-body-tertiary border rounded border-0 border-light p-4">As someone who values precision and speed, BetterMaths has become an essential tool in my toolkit. Whether I'm calculating angles for a wrestling move or managing finances, BetterMaths delivers results with unmatched reliability.</p>
-                        <div class="d-flex">
+                        <div class="d-flex"><img class="rounded-circle flex-shrink-0 me-3 fit-cover" width="50" height="50" src="assets/img/testamonials/3.png">
                             <div>
                                 <p class="fw-bold text-primary mb-0">John Cena</p>
                                 <p class="text-muted mb-0">WWE</p>
@@ -197,7 +197,7 @@
                 <div class="col mb-4">
                     <div class="d-flex flex-column align-items-center align-items-sm-start">
                         <p class="bg-body-tertiary border rounded border-0 border-light p-4">BetterMaths has been instrumental in my training regimen. From analyzing match statistics to strategizing on the field, its intuitive interface and robust functionalities have helped me elevate my game to new heights.</p>
-                        <div class="d-flex">
+                        <div class="d-flex"><img class="rounded-circle flex-shrink-0 me-3 fit-cover" width="50" height="50" src="assets/img/testamonials/2.png">
                             <div>
                                 <p class="fw-bold text-primary mb-0">Mbappé</p>
                                 <p class="text-muted mb-0">FFF</p>
