--- a/index.html
+++ b/index.html
@@ -68,6 +68,18 @@
             <p class="mb-4" style="font-size: 1.6rem;">Built by&nbsp;<span class="text-dark" style="background: var(--bs-success);"><strong>programmers</strong></span>&nbsp;for programmers.</p><a href="https://github.com/Dhaiven" target="_blank"> <img class="m-3" src="assets/img/team/Dhaiven.png" style="width: 80px;border-radius: 20%;"></a><a href="https://github.com/algorythmTTV" target="_blank"> <img class="m-3" src="assets/img/team/algorythmTTV.png" style="width: 80px;border-radius: 20%;"></a>
         </div>
     </section>
+    <section class="py-5">
+        <div class="container">
+            <div class="text-white bg-primary border rounded border-primary d-flex flex-column justify-content-between align-items-center flex-lg-row p-4 p-lg-5">
+                <div class="text-center text-lg-start py-3 py-lg-1">
+                    <h2 class="fw-bold mb-2">Pip</h2>
+                    <p class="mb-0">Install BetterMaths effortlessly with pip!</p>
+                </div><button onclick="copy()" class="btn btn-primary shadow" type="button" style="background: var(--bs-success);">pip install BetterMaths<svg class="bi bi-copy" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" style="height: 30px;margin-left: 16px;">
+        <path fill-rule="evenodd" d="M4 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zM2 5a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1v-1h1v1a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h1v1z"></path>
+    </svg></button>
+            </div>
+        </div>
+    </section>
     <section>
         <div class="container bg-primary-gradient py-5">
             <div class="row">
@@ -314,6 +326,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/smart-forms.min.js"></script>
     <script src="assets/js/bold-and-bright.js"></script>
+    <script src="assets/js/copy.js"></script>
 </body>
 
 </html>
