--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a class="nav-link" href="https://dhaiven.github.io/">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://pypi.org/project/BetterMaths/" target="_blank">PyPi</a></li>
                 </ul><a class="btn btn-primary shadow" role="button" href="https://github.com/Dhaiven/BetterMaths" style="background: var(--bs-success);" target="_blank">Github</a>
             </div>
         </div>
@@ -50,11 +51,9 @@
                     <div style="max-width: 450px;">
                         <p class="fw-bold text-success mb-2">BetterMaths</p>
                         <h2 class="fw-bold">Python mathematics<br>made easier</h2>
-                        <p class="my-3">BetterMaths turbocharges your mathematical computations in Python. From basic arithmetic to advanced functions, unlock precision and efficiency with ease.</p>
-                        <form class="d-flex justify-content-center flex-wrap justify-content-md-start flex-lg-nowrap" data-bs-theme="light" data-bss-recipient="a0092fb7ef65439d5fb0c2f554200c67">
-                            <div class="my-2 me-2"><input class="border rounded-pill shadow-sm form-control" type="email" name="email" placeholder="Your Email"></div>
-                            <div class="my-2"><button class="btn btn-primary shadow" type="submit">Subscribe </button></div>
-                        </form>
+                        <p class="my-3">Designed for both novice learners and seasoned professionals, BetterMaths offers a user-friendly platform to explore the depths of mathematical intricacies.</p>
+                        <p class="my-3">Seamlessly integrated into your Python environment, BetterMaths streamlines the process of tackling mathematical challenges, empowering users to delve into advanced functions with confidence.</p>
+                        <p class="my-3">Say goodbye to tedious calculations and hello to a world of streamlined efficiency – BetterMaths is your gateway to mathematical excellence.</p>
                     </div>
                 </div>
                 <div class="col-md-6 mb-4">
@@ -271,20 +270,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
-    </section>
-    <section class="py-5">
-        <div class="container">
-            <div class="border rounded border-0 border-white d-flex flex-column justify-content-between align-items-center flex-lg-row bg-primary-gradient p-4 p-lg-5">
-                <div class="text-center text-lg-start py-3 py-lg-1">
-                    <h2 class="fw-bold mb-2">Subscribe to our newsletter</h2>
-                    <p class="mb-0">Get news about the project.</p>
-                </div>
-                <form class="d-flex justify-content-center flex-wrap flex-lg-nowrap" data-bs-theme="light" data-bss-recipient="a0092fb7ef65439d5fb0c2f554200c67">
-                    <div class="my-2"><input class="border rounded-pill shadow-sm form-control" type="email" name="email" placeholder="Your Email"></div>
-                    <div class="my-2"><button class="btn btn-primary shadow ms-2" type="submit">Subscribe </button></div>
-                </form>
             </div>
         </div>
     </section>
