added some tests

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     <link rel="icon" type="image/png" sizes="512x512" href="assets/img/favicons/android-chrome-512x512.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap">
+    <link rel="stylesheet" href="assets/css/Pricing-Centered-badges.css">
+    <link rel="stylesheet" href="assets/css/Pricing-Centered-icons.css">
     <link rel="stylesheet" href="assets/css/untitled.css">
 </head>
 
@@ -173,6 +175,15 @@
             </div>
         </div>
     </section>
+    <div class="container py-4 py-xl-5">
+        <div class="row mb-5">
+            <div class="col-md-8 col-xl-6 text-center mx-auto">
+                <h2>Test it</h2>
+                <p class="w-lg-50">Try it by yourself to see if it correctly fits your projects :D</p>
+            </div>
+        </div>
+        <div class="row gy-4 gy-xl-0 row-cols-1 row-cols-md-2 row-cols-xl-3 d-xl-flex justify-content-center align-items-xl-center gutter-y"><iframe src="https://replit.com/@algorythmTTV/BetterMaths?embed=true" width="600" height="400"></iframe></div>
+    </div>
     <section class="py-5">
         <div class="container py-5">
             <div class="row mb-5">
