--- a/index.html
+++ b/index.html
@@ -182,20 +182,57 @@
         }
 
         .main-title {
-            font-size: 3.5rem;
+            font-size: 2rem;
             font-weight: 700;
-            margin-bottom: 15px;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
-            line-height: 1.2;
+            margin-bottom: 0.5vh;
+            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+            line-height: 1.1;
+            text-align: center;
+            padding: 0 10px;
         }
 
         .subtitle {
-            font-size: 1.3rem;
+            font-size: 0.9rem;
             font-weight: 300;
             opacity: 0.9;
-            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
-            line-height: 1.4;
+            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+            line-height: 1.3;
             font-style: italic;
+            text-align: center;
+            padding: 0 10px;
+        }
+
+        @media (min-width: 480px) {
+            .main-title {
+                font-size: 2.5rem;
+                margin-bottom: 1vh;
+            }
+
+            .subtitle {
+                font-size: 1rem;
+            }
+        }
+
+        @media (min-width: 768px) {
+            .main-title {
+                font-size: 3rem;
+                margin-bottom: 1.2vh;
+            }
+
+            .subtitle {
+                font-size: 1.2rem;
+            }
+        }
+
+        @media (min-width: 1024px) {
+            .main-title {
+                font-size: 3.5rem;
+                margin-bottom: 1.5vh;
+            }
+
+            .subtitle {
+                font-size: 1.3rem;
+            }
         }
 
         /** Sommaire */
@@ -204,7 +241,7 @@
             background: rgba(255, 255, 255, 0.95);
             backdrop-filter: blur(10px);
             border-radius: 20px;
-            padding: 40px;
+            padding: 4vh;
             box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
             border: 2px solid rgba(255, 255, 255, 0.2);
             max-width: 500px;
@@ -923,7 +960,7 @@
 
         /** Terminologie & Source */
         .definition {
-            padding: 20px;
+            padding: 2vh;
             max-width: 100%;
             margin: 0 auto;
         }
@@ -1055,8 +1092,8 @@
         .sources-section {
             background: rgba(255, 255, 255, 0.9);
             border-radius: 15px;
-            padding: 20px;
-            margin-top: 20px;
+            padding: 2vh;
+            margin-top: 2vh;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
             width: 100%;
         }
